--- a/Hobbies.html
+++ b/Hobbies.html
@@ -8,7 +8,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/style1.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+crossorigin="anonymous"></script>
+ -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+ <script src ="js/jquery_1.js"></script>
 <body>
   <div class="topnav">
     <a href="./index.html">About Me</a>
@@ -19,32 +24,71 @@
     <a href="./Hobbies.html">Hobbies</a>
     <a href="https://www.facebook.com/ameya.gidh/" class="fa fa-facebook"></a>
     <a href="https://twitter.com/GidhAmeya" class="fa fa-twitter"></a>
-    <a href="www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
+    <a href="https://www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
     <a href="https://github.com/AmeyaSantoshGidh" class="fa fa-github"></a>
-v
   </div>
+</div> 
 </div>
 </div>
-<div class="main">
-  <h class = "">Hobbies</h2>
-  <ul>
-    <li>Reading</li>
- <br>
-    <li>Treking</li> <br>
-    <li>Hiking</li> <br>
-    <li>socker</li> <br>
-    <li>Running</li> <br>
-    <li>Fishing</li> <br>
-    <li>Listening to  music</li> <br>
-  </ul>
+  <center>
+  <h1>Hobbies</h1>
+</center>
+<div>
+  <center>
+    <h2>Reading</h2>
+  </center>
 </div>
-</div>
-    
+  <div class="read"><img src = "/static/Images/books.jpg"width="100%"></div>
+  <div>
+    <center>
+      <h2>Treking</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/trek.jpeg"width="100%"></div>
+  <div>
+    <center>
+      <h2>Camping</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/camping.jpg"width="100%"></div>
+  <div>
+    <center>
+      <h2>Soccer</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/socker.jpg"width="100%"></div>
+  <div>
+    <center>
+      <h2">Fishing</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/fishing.jpg" width="100%"></div>
+  <div>
+    <center>
+      <h2>Running</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/running.jpeg"width="100%"></div>
+  <div>
+    <center>
+      <h2>Boxing</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/boxing.jpg"width="100%"></div>
+  <div>
+    <center>
+      <h2>Swimming</h2>
+    </center>
+  </div>
+  <div class="fade"><img src = "/static/Images/swimming.jpg"width="100%"></div>
+
+
+
+
 <footer>
   <p>Author: Ameya Santosh Gidh<br>
   <a href="gidh.am@northeastern.edu">gidh.am@northeastern.edu</a></p>
 </footer>
-
-  </body>
-  </html>
+</body>
+</html> 
   
