--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -19,41 +19,67 @@
     <a href="./Hobbies.html">Hobbies</a>
     <a href="https://www.facebook.com/ameya.gidh/" class="fa fa-facebook"></a>
     <a href="https://twitter.com/GidhAmeya" class="fa fa-twitter"></a>
-    <a href="www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
+    <a href="https://www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
     <a href="https://github.com/AmeyaSantoshGidh" class="fa fa-github"></a>
 
   </div>
 </div>
 </div>
-<div class="main">
-  <h1 class = "">Work Experience</h1>
-  <tr>
-    <td><h3>Graduate Teaching Assistant</h3>
-    <td>
-    <tr><h5>Northeastern University</h5>Collaborated with faculty to manage course logistics, assignments, and class activities. Responsible for
-      evaluating, grading assignments and delivering constructive feedback.Conducted office hours on topics
-      including finite automata, regular expressions, Turing machines, NP-P completeness problems to
-      clear student doubts and queries.</tr>
-    </td>
-    <td><h3>Application Developer Intern</h3>
-      <td>
-      <tr><h5>Appdid Infotech</h5>
-        Coordinated with a team of 5 members to create a multi-purpose calculator application.
-        Used Android Studio Java programming to test and debug the application.
-        Integrated extra functionality in the application.
-        Created the Final report and presented it before the company using Microsoft Office 365 tools.
-    <tr>
-      <td><h3>Machine Learning Intern</h3>
-      <td>
-      <tr><h5>Zebo.AI</h5>Collaborated with a team of 45 to create a Machine Learning Model for dermatology data.
+
+<div>
+  <center>
+    <img src ="static/work_experience.png"><br>
+    <h1>Work Experience</h1></center>
+
+  <div class = "information">
+  <h1>Northeastern University</h1>
+  <h3>Graduate Teaching Assistant</h3>
+  <div class = "Text1">
+      <img src="/static/neu.png" alt ="my_image">
+       <div style="padding:120px">
+        <h2>Collaborated with faculty to manage course logistics, assignments, and class activities. Responsible for
+        evaluating, grading assignments and delivering constructive feedback.Conducted office hours on topics
+        including finite automata, regular expressions, Turing machines, NP-P completeness problems to
+        clear student doubts and queries.
+        </h2>
+</div>
+<div>
+</div>
+</div>
+</div>
+
+
+<div class = "information">
+  <h1>Appdid InfoTech</h1>
+  <h3>Application Development Intern</h3>
+  <div class = "Text1">
+      <img src="/static/appdid.png" alt ="my_image">
+       <div style="padding:120px">
+        <h2>Coordinated with a team of 5 members to create a multi-purpose calculator application.
+          Used Android Studio Java programming to test and debug the application.
+          Integrated extra functionality in the application.
+          Created the Final report and presented it before the company using Microsoft Office 365 tools.
+        </h2>
+</div>
+<div>
+</div>
+</div>
+</div>
+
+<div class = "information">
+  <h1>Machine Learning</h1>
+  <h3>Machine Learning Intern</h3>
+  <div class = "Text1">
+      <img src="/static/zebo.png" alt ="my_image">
+       <div style="padding:120px"><h2>
+        Collaborated with a team of 45 to create a Machine Learning Model for dermatology data.
         Developed and deployed the model that assisted the company in predicting the type of skin illness linked with
         an image data.
         Fine-tuned the model’s hyper parameters, which increased accuracy by roughly 8%.
-    </tr>
-    </td>
-    <td></td>
-    <td></td>
-  </tr>
+      </h2>
+      </div>
+<div>
+</div>
 </div>
 </div>
 <footer>
