--- a/projects.html
+++ b/projects.html
@@ -19,16 +19,15 @@
     <a href="./Hobbies.html">Hobbies</a>
     <a href="https://www.facebook.com/ameya.gidh/" class="fa fa-facebook"></a>
     <a href="https://twitter.com/GidhAmeya" class="fa fa-twitter"></a>
-    <a href="www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
+    <a href="https://www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
     <a href="https://github.com/AmeyaSantoshGidh" class="fa fa-github"></a>
 
   </div>
 </div>
 </div>
 <div class="main">
-<h2 class = ""> Projects</h2>
+<h2> Projects</h2>
 <div>
-  <h5>Project</h5>
   <table border="10px">
       <tr>
           <td> Project Name</td>
@@ -61,9 +60,61 @@
       </tr>
   </table>
 </div>
+</div>
+</div>
 
-</div>
-</div>
+
+
+<div class="grid-container">
+  <div class="grid-item">
+    <h6> Python</h6>
+    <span class = "text">
+      Created projects in python like Slide Puzzle Game, Ping Pong game, covid -19 online 
+      web application, jarvis and chat bot.
+    </span>
+  </div>
+  
+  <div class="grid-item">
+    <h6> Machine Learning and data science</h6>
+    <span class = "text">
+      Open Cv project on face recognition, Prediction of house sale, Skin cancer detection,
+      Stock analysis, Amazon customer Sentiment Analysis,
+      Detecting pneumonia, Fruit recognizer.   
+    </span>
+
+  </div>
+  <div class="grid-item">
+    <h6> App development</h6>
+    <span class = "text">
+      Worked on application development project like music player, finance application (under development),
+      Multi purpose calculator application, Snap-Up a grocerry store application.
+    </span>
+  </div>  
+  <div class="grid-item"> 
+     <h6> Web development</h6>
+    <span class = "text">
+      Deployed Programmmers hub website, commenting Blog in flask, MERN stack website(under development).
+    </span>
+  </div> 
+
+  <div class="grid-item"> 
+    <h6> C</h6>
+    <span class = "text">
+     Created a Linux shell in C that supports typical commands like 'cd,'help,'exit,'ls,' and pipes, as well as unique ones like 'history' and 'guessinggame.'
+     Used signal handler to implement keyboard shortcuts.
+     To parse and execute commands, I used fork, execvp, and the C library.
+    </span>
+
+ </div>
+  <div class="grid-item">
+    <h6> Java program</h6>
+    <span class = "text">
+      Libray management system, Photo Album project and model for chess game.
+    </span>
+  </div>
+  </div>
+
+
 <footer>
   <p>Author: Ameya Santosh Gidh<br>
   <a href="gidh.am@northeastern.edu">gidh.am@northeastern.edu</a></p>
