--- a/resume.html
+++ b/resume.html
@@ -19,24 +19,65 @@
     <a href="./Hobbies.html">Hobbies</a>
     <a href="https://www.facebook.com/ameya.gidh/" class="fa fa-facebook"></a>
     <a href="https://twitter.com/GidhAmeya" class="fa fa-twitter"></a>
-    <a href="www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
+    <a href="https://www.linkedin.com/in/ameya-gidh" class="fa fa-linkedin"></a>
     <a href="https://github.com/AmeyaSantoshGidh" class="fa fa-github"></a>
 
   </div>
 </div>
 </div>
 <div class="main">
-  <h2 class = "">Ameya Santosh Gidh</h2>
-  <div>
-    Graduate student at northeastern university.
-  </div>
-    <p>Open a PDF file <a href="/static/Resume_.pdf">Resume</a>.</p>
+  <h5>Open a PDF file <a href="/static/Resume_.pdf"><button>Resume</button></a></h5> 
+ <br><br>
+<div>
+  <h1>About me in a Nutshell</h1>
+  <hr/>
+  <br>
+  <p >Interests</p>
+  <ul>
+    <li>Reading</li>
+    <li>Treking</li>
+    <li>Camping</li>
+    <li>Playing Socker</li>
+    <li>Fishing</li>
+    <li>Running</li>
+    <li>Boxing</li>
+    <li>Swimming</li>
+    <li>Photography</li>
+   
+  </ul>
+  <p>Skills</p>
+  <ul>
+    <li>Python</li>
+    <li>Java</li>
+    <li>javascript</li>
+    <li>C</li>
+    <li>c++</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Bootstrap</li>
+    <li>SQL</li>
+    <li>MongoDB</li>
+    <li>PostgressSQL</li>
+    <li>SQLite</li>
+    <li>Nodejs</li>
+    <li>Express</li>
+    <li>React</li>
+  </ul>
+  <p>Experience</p>
+  <ul>
+    <li>Graduate Teaching Assistant</li>
+    <li>Machine learning Internship</li>
+    <li>Appdid Info-Tech Internship</li>
+  </ul>
+  <p>Extracurriculars</p>
+  <ul>
+    <li>Rotary Club</li>
+    <li>Web Designing Head for college technical feast</li>
+    <li>VRC robotics competition 3rd price winner</li>
+  </ul>
 </div>
-
-
+<div></div>
 </div>
-</div>
-
 <footer>
   <p>Author: Ameya Santosh Gidh<br>
   <a href="gidh.am@northeastern.edu">gidh.am@northeastern.edu</a></p>
