--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -30,58 +30,53 @@
   <center>
     <img src ="static/work_experience.png"><br>
     <h1>Work Experience</h1></center>
-
-  <div class = "information">
-  <h1>Northeastern University</h1>
-  <h3>Graduate Teaching Assistant</h3>
-  <div class = "Text1">
-      <img src="/static/neu.png" alt ="my_image">
-       <div style="padding:120px">
-        <h2>Collaborated with faculty to manage course logistics, assignments, and class activities. Responsible for
-        evaluating, grading assignments and delivering constructive feedback.Conducted office hours on topics
-        including finite automata, regular expressions, Turing machines, NP-P completeness problems to
-        clear student doubts and queries.
-        </h2>
-</div>
-<div>
-</div>
-</div>
-</div>
-
-
-<div class = "information">
-  <h1>Appdid InfoTech</h1>
-  <h3>Application Development Intern</h3>
-  <div class = "Text1">
-      <img src="/static/appdid.png" alt ="my_image">
-       <div style="padding:120px">
-        <h2>Coordinated with a team of 5 members to create a multi-purpose calculator application.
+<section class="education" id="education">
+  <div class="box-container">
+    <div class="box">
+        <div class="image">
+        <img draggable="false" src="./static/Neu_logo.png" alt="college image">
+        </div>
+        <div class="content">
+        <h3>Graduate Teaching Assistant</h3>
+        <p>Collaborated with faculty to manage course logistics, assignments, and class activities. Responsible for
+          evaluating, grading assignments and delivering constructive feedback.Conducted office hours on topics
+          including finite automata, regular expressions, Turing machines, NP-P completeness problems to
+          clear student doubts and queries.</p>
+        </div>
+    </div>
+    
+    <div class="box">
+        <div class="image">
+        <img draggable="false" src="./static/appdid.png" alt="college image">
+        </div>
+        <div class="content">
+        <h3>Application Developement Intern</h3>
+        <p>Coordinated with a team of 5 members to create a multi-purpose calculator application.
           Used Android Studio Java programming to test and debug the application.
           Integrated extra functionality in the application.
           Created the Final report and presented it before the company using Microsoft Office 365 tools.
-        </h2>
-</div>
-<div>
-</div>
-</div>
-</div>
+        </p>
+        </div>
+    </div>
 
-<div class = "information">
-  <h1>Machine Learning</h1>
-  <h3>Machine Learning Intern</h3>
-  <div class = "Text1">
-      <img src="/static/zebo.png" alt ="my_image">
-       <div style="padding:120px"><h2>
-        Collaborated with a team of 45 to create a Machine Learning Model for dermatology data.
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="./static/zebo.png" alt="school image">
+      </div>
+      <div class="content">
+      <h3>Machine Learning Intern</h3>
+      <p>Collaborated with a team of 45 to create a Machine Learning Model for dermatology data.
         Developed and deployed the model that assisted the company in predicting the type of skin illness linked with
         an image data.
-        Fine-tuned the model’s hyper parameters, which increased accuracy by roughly 8%.
-      </h2>
+        Fine-tuned the model’s hyper parameters, which increased accuracy by roughly 8%.</p>
+  
       </div>
-<div>
+    </div>
 </div>
-</div>
-</div>
+
+
+
+</section>
 <footer>
   <p>Author: Ameya Santosh Gidh<br>
   <a href="gidh.am@northeastern.edu">gidh.am@northeastern.edu</a></p>
