--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       MySite
     </title>
   </head>  
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" information__="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/style1.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -39,7 +39,7 @@
       </center>
       </div>
       <div class = "Text1">
-          <img src="/static/ameya2.png" alt ="my_image">
+          <img src="/static/ameya2.png" alt ="my_picture">
            <div class="Yo">
              I am a software developer from India.
              I am a graduate student studying master's in computer science
@@ -190,23 +190,23 @@
     <img src ="static/icons_/graduation.png"></h1><br>
     <h1>My Education</h1></center>
     <section class="education" id="education">
-      <div class="box-container">
-        <div class="box">
-            <div class="image">
-            <img draggable="false" src="./static/Neu_logo.png" alt="college image">
+      <div class="b1_holder">
+        <div class="holder">
+            <div class="picture">
+            <img src="./static/Neu_logo.png" alt="college picture">
             </div>
-            <div class="content">
+            <div class="information__">
             <h3>Masters of Science in Computer Science</h3>
             <p>Northeastern University</p>
             2021-2023
             </div>
         </div>
     
-        <div class="box">
-          <div class="image">
-          <img draggable="false" src="./static/spce.png" alt="school image">
+        <div class="holder">
+          <div class="picture">
+          <img  src="./static/spce.png" alt="school picture">
           </div>
-          <div class="content">
+          <div class="information__">
           <h3>Sardar Patel College Of Engineering</h3>
           <p>Bachelors of Technology in Mechanical Engineering</p>
           2017 - 2021
